[package]
name = "resource-monitor"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[dependencies]
sysinfo = "0.33.1"
gethostname = "1.0.0"
serde_json = "1.0.140"
serde = { version = "1.0.218", features = ["derive"] }
pnet = "0.35.0"
base64 = "0.22.1"
if-addrs = "0.13.3"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
threadpool = "1.8.1"

[target.x86_64-pc-windows-msvc.dependencies]
openssl = { version = "0.10.71", features = ["vendored"] }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.71", features = ["vendored"] }